[gd_scene load_steps=4 format=2]

[ext_resource path="res://main.gd" type="Script" id=1]
[ext_resource path="res://editor_theme.tres" type="Theme" id=2]
[ext_resource path="res://TextboxResize.gd" type="Script" id=3]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="Peers" type="Node" parent="."]

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer"]
margin_right = 153.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer"]
margin_right = 153.0
margin_bottom = 461.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.75
theme = ExtResource( 2 )

[node name="UserList" type="RichTextLabel" parent="HBoxContainer/VBoxContainer/Panel"]
margin_bottom = 440.0
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
selection_enabled = true
script = ExtResource( 3 )

[node name="NameEntry" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
margin_top = 465.0
margin_right = 153.0
margin_bottom = 495.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme = ExtResource( 2 )
placeholder_text = "User Name"

[node name="IPEntry" type="LineEdit" parent="HBoxContainer/VBoxContainer"]
margin_top = 499.0
margin_right = 153.0
margin_bottom = 529.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme = ExtResource( 2 )
placeholder_text = "IP To Connect To"

[node name="ConnectButton" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 533.0
margin_right = 153.0
margin_bottom = 563.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme = ExtResource( 2 )
text = "Connect"

[node name="StartServer" type="Button" parent="HBoxContainer/VBoxContainer"]
margin_top = 567.0
margin_right = 153.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.05
theme = ExtResource( 2 )
text = "Host Server"

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
margin_left = 157.0
margin_right = 1024.0
margin_bottom = 600.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.85

[node name="Panel" type="Panel" parent="HBoxContainer/VBoxContainer2"]
margin_right = 867.0
margin_bottom = 506.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 0.85
theme = ExtResource( 2 )

[node name="ChatMsgs" type="RichTextLabel" parent="HBoxContainer/VBoxContainer2/Panel"]
focus_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 2 )
text = "Initialize a connection..."
scroll_following = true
selection_enabled = true
script = ExtResource( 3 )

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer/VBoxContainer2"]
margin_top = 510.0
margin_right = 867.0
margin_bottom = 600.0
size_flags_vertical = 3
size_flags_stretch_ratio = 0.15

[node name="MsgEdit" type="TextEdit" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_right = 776.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.9
theme = ExtResource( 2 )

[node name="SendButton" type="Button" parent="HBoxContainer/VBoxContainer2/HBoxContainer"]
margin_left = 780.0
margin_right = 867.0
margin_bottom = 90.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1
theme = ExtResource( 2 )
text = "Send"
[connection signal="pressed" from="HBoxContainer/VBoxContainer/ConnectButton" to="." method="_on_ConnectButton_pressed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer/StartServer" to="." method="_on_StartServer_pressed"]
[connection signal="text_changed" from="HBoxContainer/VBoxContainer2/HBoxContainer/MsgEdit" to="." method="_on_MsgEdit_text_changed"]
[connection signal="pressed" from="HBoxContainer/VBoxContainer2/HBoxContainer/SendButton" to="." method="_on_SendButton_pressed"]
